--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -7,7 +7,6 @@
     <script th:src="@{/js/bootstrap.min.js}"></script>
 </head>
 
-<body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="header">
 
     <div class="container-fluid">
@@ -25,6 +24,11 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/menu}">Menu</a>
                 </li>
+                <div sec:authorize="hasRole('ROLE_ADMIN')">
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/menu/add}">Add Menu</a>
+                    </li>
+                </div>
             </ul>
         </div>
         <div sec:authorize="isAuthenticated()">
@@ -48,6 +52,5 @@
 </nav>
 
 </nav>
-
 </body>
 </html>
